<resources>
    <string name="app_name">AtmWithdraw</string>
    <string name="my_atm">My ATM</string>
    <string name="rs_2000">Rs. 2000</string>
    <string name="rs_500">Rs. 500</string>
    <string name="rs_200">Rs. 200</string>
    <string name="rs_100">Rs. 100</string>
    <string name="amount">Amount</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="withdraw">withdraw</string>
    <string name="enter_you_withdraw_amount">Enter your withdraw amount</string>
    <string name="_zero">0</string>
    <string name="atm_amount">ATM Amount</string>
</resources>