<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/my_atm"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardViewAtmCurrencyCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayoutHeader"
                android:layout_margin="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp"
                    android:weightSum="5">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:textAlignment="center"
                            android:text="@string/atm_amount"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/textViewTotalAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingStart="5dp"
                            android:text="@string/_zero"
                            android:textAlignment="center"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:text="Rs. 100"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/textViewHundredRupeeCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingStart="5dp"
                            android:text="@string/_zero"
                            android:textAlignment="center"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:text="Rs. 200"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/textViewTwoHundredRupeeCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingStart="5dp"
                            android:text="@string/_zero"
                            android:textAlignment="center"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:text="Rs. 500"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/textViewFiveHundredRupeeCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingStart="5dp"
                            android:text="@string/_zero"
                            android:textAlignment="center"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:text="@string/rs_2000"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/textViewTwoThousandRupeeCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingStart="5dp"
                            android:text="@string/_zero"
                            android:textAlignment="center"
                            android:textColor="@color/gray"
                            android:textSize="12dp" />


                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/enter_you_withdraw_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextWithdrawAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/materialButtonWithdraw"
                android:text="@string/withdraw"
                app:backgroundTint="@color/purple_200"
                android:paddingHorizontal="20dp"
                app:cornerRadius="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/last_transactions"
                android:paddingStart="10dp"
                android:textSize="16dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:weightSum="5">




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:textAlignment="center"
                        android:text="@string/amount"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="12dp" />




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/rs_100"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12dp" />






                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:textStyle="bold"
                        android:text="@string/rs_200"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12dp" />







                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/rs_500"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12dp" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/rs_2000"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12dp" />



            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/rv_transactions"
                android:id="@+id/rvTransactions"/>





        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>